# cppl1_q12020

./: .gitignore  README.md
challenge_02_matrices/: CMakeLists.txt
challenge_02_matrices/include/algebra/: algebra.hpp
challenge_02_matrices/src/: algebra.cpp
challenge_02_matrices/test/: CMakeLists.txt  runner.cpp  test_cases.cpp
course/: CMakeLists.txt
course/include/: Isometry.hpp  Matrix3.h  Vector3.h  isometry.h  matrix3.h  vector3.h
course/include/isometry/: isometry.hpp
course/src/: Isometry.cc  Matrix3.cc  Vector3.cc  isometry.cc  isometry.cpp  main.cc  main.cpp  matrix3.cc  vector3.cc
course/test/: CMakeLists.txt
course/test/src/: CMakeLists.txt  isometry_TEST.cc  matrix3_TEST.cc  vector3_TEST.cc
docker/: Dockerfile  run.sh
